<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_signup_hint">Name</string>
    <string name="emial_signup_hint">Email</string>
    <string name="pass_signup_hint">Password</string>
    <string name="confirm_pass_hint">Confirm Password</string>
    <string name="signup_btn">SignUp</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
</resources>