<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#29304a"
    tools:context=".login.loginView.LoginFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:width="300dp"
        android:background="@drawable/textplain_background"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/emial_signup_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/passLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:width="300dp"
        android:background="@drawable/textplain_background"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/pass_signup_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="@+id/loginEmail"
        app:layout_constraintStart_toStartOf="@+id/loginEmail"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:width="160dp"
        android:height="55dp"
        android:backgroundTint="#ef793c"
        android:text="@string/login"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="@+id/passLogin"
        app:layout_constraintStart_toStartOf="@+id/passLogin"
        app:layout_constraintTop_toBottomOf="@+id/passLogin" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="160dp"
        android:height="55dp"
        android:backgroundTint="#ef793c"
        android:text="@string/signup"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <TextView
        android:id="@+id/emailWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="13dp"
        android:textColor="#F80404"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/passLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail" />

    <TextView
        android:id="@+id/passwordWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="8dp"
        android:textColor="#EC0B0B"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>
